# cube-chrono

./: .example.env  .gitattributes  .gitignore  LICENSE  README.md  compose.yml  index.html  login.html  package-lock.json  register.html  script.js  style.css
.github/workflows/: rust.yml
backend/: Cargo.toml  README.md
backend/src/: error.rs  lib.rs  main.rs  routes.rs
backend/src/models/: account.rs  event.rs  mod.rs  refresh_token.rs  session.rs  user.rs
backend/src/routes/: accounts.rs  auth.rs  events.rs  hello.rs  mod.rs  scrambles.rs  sessions.rs  user.rs
backend/src/services/: account_services.rs  auth.rs  auth_services.rs  jwt.rs  jwt_services.rs  mod.rs  scramble_services.rs  session_services.rs  user.rs  validation_services.rs
backend/src/services/utils/: jwt_utils.rs  mod.rs  password_utils.rs  time_utils.rs
doc/: README.md  api-documentation.md
doc/req-spec/: main.typ  refs.bib
frontend/: README.md  admin.html  events.html  index.html  login.html  package-lock.json  package.json  profile.html  ranking.html  register.html  script.js  server.js  style.css  utils.js
frontend/public/: script.js  style.css
frontend/routes/: adminRoutes.js  eventRoutes.js  profileRoutes.js  rankingRoutes.js
frontend/views/: 404.ejs  admin.ejs  admin.html  events.ejs  events.html  index.ejs  login.ejs  profile.ejs  ranking.ejs  ranking.html  register.ejs  script.js  session.ejs  sessions.ejs
